# logos-evm-wallet-backend-module

./: .gitignore  CMakeLists.txt  README.md  flake.nix  index.html  metadata.json
.github/workflows/: doctests.yml
docs/: specs.md
doctests/: wallet-anvil-e2e.test.yaml  wallet-backend-fanout.test.yaml  wallet-backend-runtime.test.yaml
doctests/outputs/: wallet-anvil-e2e.md  wallet-backend-runtime.md
doctests/outputs/modules/capability_module/: capability_module_plugin.dylib  manifest.json  variant
main/: index.html
main/macos-latest/: index.html
main/ubuntu-latest/: index.html
pr-3/: index.html
pr-3/macos-latest/: index.html
pr-3/ubuntu-latest/: index.html
pr-6/: index.html
pr-6/macos-latest/: index.html
pr-6/ubuntu-latest/: index.html
pr-7/: index.html
pr-7/macos-latest/: index.html
pr-7/ubuntu-latest/: index.html
pr-8/: index.html
pr-8/macos-latest/: index.html
pr-8/ubuntu-latest/: index.html
pr-9/: index.html
pr-9/macos-latest/: index.html
pr-9/ubuntu-latest/: index.html
rust-lib/: Cargo.toml
rust-lib/src/: config.rs  glue.rs  history.rs  lib.rs  txbuild.rs
